fix: Changed the padding for the adventure component on mobile screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -586,7 +586,7 @@ body {
     }
 
     .adventure {
-        padding: 0 1.2rem;
+        padding: 0 1rem;
     }
 
     .adventure--images,
